# LiquiFi

./: .gitattributes  .gitignore  AI_SOLO_FEASIBILITY.md  BLOOMBERG_KILLER_ANALYSIS.md  CLAUDE.md  CRITICAL_FIXES_DATA_VALIDATION.md  DATA_QUALITY_FIX_SUMMARY.md  EXTERNAL_DATA_SOURCES.md  FUNDING_ROADMAP.md  GITHUB_TOPICS_STRATEGY.md  MARKET_OUTLOOK_2027.md  ML_ENHANCEMENT_SUMMARY.md  README.md  SMART_PIVOT_ROADMAP.md  WHY_SCRAPING_FAILS.md  index.html  liquifi-ultimate.jsx  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json  vite-env.d.ts  vite.config.ts
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .env.example  AU_BANK_REALITY_CHECK.md  Dockerfile  Dockerfile.dev  GITHUB_LIBS_INTEGRATION.md  GO_LIVE_CHECKLIST.md  INTEGRATION_GUIDE.md  JAIPUR_OUTREACH_STRATEGY.md  PARALLEL_TASKS.md  PARALLEL_TASKS_STATUS.md  POSTGRESQL_BENEFITS.md  SALES_STRATEGY_REALITY.md  ai_bridge.py  alembic.ini  auth.py  config.py  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  main.py  multi_ai_collector.py  requirements.txt  run_intensive_training.py  train.py
backend/alembic/: env.py
backend/data/: cache.py  data_quality.py  historical_fetcher.py  (+4 more)
backend/native/: CMakeLists.txt  bindings.cpp  monte_carlo.cpp
electron/: backend-manager.cjs  backend-manager.ts  main.cjs  main.ts  menu.cjs  menu.ts  preload.ts  splash.html
monitoring/: prometheus.yml
public/: manifest.json  sw.js
rate-engine/: build.sbt
scripts/: generate-icons.sh  install_dev_tools.py  launch-liquifi.command
src/: App.jsx  App.tsx  main.jsx  main.tsx
(+171 files in other folders)
